# GSEngine

./: autotest.sh  reload.sh  run_mac.sh
include/: gs_engine.h
platform/mac/: CMakeLists.txt  build.sh  install.sh  main.cpp  run.sh
src/: CMakeLists.txt  constants.hpp  gs_engine.cpp
src/backend/: program.cpp  program.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/backend/buffer/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/backend/parameter/: float_parameter.cpp  float_parameter.h  index_parameter.cpp  index_parameter.h  layout.cpp  layout.h  parameter.h  texture2d_parameter.cpp  texture2d_parameter.h  uniform_parameter.cpp  uniform_parameter.h  vec4_parameter.cpp  vec4_parameter.h  vertex_parameter.cpp  vertex_parameter.h
src/backend/program/: program.cpp  program.h  program_manager.cpp  program_manager.h  shader.cpp  shader.h
src/backend/resource/: frame_buffer.cpp  frame_buffer.h  texture.cpp  texture.h
src/backend/utils/: gs_gl_checker.cpp  gs_gl_checker.h  gs_logger.cpp  gs_logger.h  gs_platform.h  hash_utils.h
src/physics/: collidable.h  collidable_detect.cpp  collidable_detect.h  drawable.h  math.h  movable.h  object.cpp  object.h  rect_2d.cpp  rect_2d.h
test/: CMakeLists.txt  main.cpp
test/backend/: test_buffer.cpp  test_constants.h  test_framebuffer.cpp  test_parameter.cpp  test_program.cpp  test_renderer.cpp  test_shader.cpp  test_texture.cpp  test_utils.cpp
